--- a/Bookify.Infrastructure/Bookify.Infrastructure.csproj
+++ b/Bookify.Infrastructure/Bookify.Infrastructure.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <Folder Include="Clock\" />
+    <Folder Include="Data\" />
     <Folder Include="Email\" />
   </ItemGroup>
 
