adding the respictive controller for the Apartments .

--- a/Bookify.Api/Bookify.Api.csproj
+++ b/Bookify.Api/Bookify.Api.csproj
@@ -14,7 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\Bookify.Infrastructure\Bookify.Infrastructure.csproj" />
+    <ProjectReference Include="..\BookigyApplication\Bookify.Application.csproj" />
   </ItemGroup>
 
 </Project>
