--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,18 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=4125
-      - POSTGRES_DB=postgres
+      - POSTGRES_DB=bookify
+
+        
+    healthcheck:
+        test: [ "CMD-SHELL", "pg_isready" ]
+        interval: 5s
+        timeout: 5s
+        retries: 5
+
     volumes:
       - ./.containers/database:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5432:5432" 
+
+        
