implementing KeyCloack as Idn of the project to the docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,19 @@ services:
       dockerfile: src/Bookify.Api/Dockerfile
     depends_on:
       - bookify-db
+ 
+  bookify-idp:
+   image: quay.io/keycloak/keycloak:latest
+   container_name: Bookify.Identity
+   command: start-dev --import-realm
+   environment:
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+   volumes:
+      - ./.containers/identity:/opt/keycloak/data
+      - ./.files/bookify-realm-export.json:/opt/keycloak/data/import/realm.json
+   ports:
+      - 18080:8080
 
 
         
