--- a/src/Bookify.Api/appsettings.Development.json
+++ b/src/Bookify.Api/appsettings.Development.json
@@ -8,5 +8,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Audience": "account",
+    "ValidIssuer": "http://bookify-idp:8080/realms/bookify",
+    "MetadataUrl": "http://bookify-idp:8080/realms/bookify/.well-known/openid-configuration",
+    "RequireHttpsMetadata": false
   }
 }
